kubernetes-manifests/post-service-manifest.yml
---
# create configmap
# kubectl create configmap post-service-env  --from-env-file=../post-service/.env -n socialmediaapp

#create secret
# kubectl create secret generic post-service-secret --from-literal=JWT_SECRET="JWT_SECRET" -n socialmediaapp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service-deployment
  namespace: socialmediaapp
  labels:
    serviceName: post-service
    app: socialmediaapp
spec:
  replicas: 1
  selector:
    matchLabels: { serviceName: post-service }
  template:
    metadata: { labels: { serviceName: post-service, app: socialmediaapp } }
    spec:
      containers:
        - name: post-service
          image: le098/socialmediaapp-post-service:latest
          ports: [{ containerPort: 5002 }]
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: socialmediaapp
  labels:
    serviceName: post-service
    app: socialmediaapp
spec:
  selector: { serviceName: post-service }
  ports: [{ port: 5002, targetPort: 5002 }]

---
