kubernetes-manifests/rabbitmq-manifest.yml
---
# deployment and configuration for rabbitmq
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: socialmediaapp
  labels:
    serviceName: rabbitmq
    app: socialmediaapp
spec:
  replicas: 1
  selector:
    matchLabels: { serviceName: rabbitmq }
  template:
    metadata: { labels: { serviceName: rabbitmq } }
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "-q", "ping"]
            initialDelaySeconds: 20 # wait longer before first check
            periodSeconds: 10
            timeoutSeconds: 5 # allow 5s for the ping command
---
# service for rabbitmq
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: socialmediaapp
  labels:
    serviceName: rabbitmq
    app: socialmediaapp
spec:
  selector: { serviceName: rabbitmq }
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
    - port: 15672
      targetPort: 15672
      name: management
---
