kubernetes-manifests/redis-manifest.yml
# deployment and configuration for redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: socialmediaapp
  labels:
    serviceName: redis
    app: socialmediaapp
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata: { labels: { app: redis } }
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports: [{ containerPort: 6379 }]
---
# service for redis
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: socialmediaapp
  labels:
    serviceName: redis
    app: socialmediaapp
spec:
  selector: { app: redis }
  ports: [{ port: 6379, targetPort: 6379 }]
