kubernetes-manifests/user-service-manifest.yml
---
# create configmap
# kubectl create configmap user-service-env  --from-env-file=../user-service/.env -n socialmediaapp

#create secret
# kubectl create secret generic user-service-secret --from-literal=JWT_SECRET="JWT_SECRET" -n socialmediaapp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: socialmediaapp
  labels:
    serviceName: user-service
    app: socialmediaapp
spec:
  replicas: 1
  selector:
    matchLabels: { serviceName: user-service }
  template:
    metadata: { labels: { serviceName: user-service, app: socialmediaapp } }
    spec:
      containers:
        - name: user-service
          image: le098/socialmediaapp-user-service:latest
          ports: [{ containerPort: 5001 }]
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: socialmediaapp
  labels:
    serviceName: user-service
    app: socialmediaapp
spec:
  selector: { serviceName: user-service }
  ports: [{ port: 5001, targetPort: 5001 }]

---
