kubernetes-manifests/network-manifest.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-policy
  namespace: socialmediaapp
spec:
  podSelector:
    matchLabels:
      app: socialmediaapp
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: apigateway
